// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`revealJs > Should not render 1`] = `
"<h2>Slide 1</h2>
<p>A paragraph with some text and a <a href="https://mister-hope.com">link</a></p>
<hr>
<h2>Slide 2</h2>
<ul>
<li>Item 1</li>
<li>Item 2</li>
</ul>
<hr>
<h2>Slide 3.1</h2>
<pre><code class="language-js">const a = 1;
</code></pre>
<p>--</p>
<h2>Slide 3.2</h2>
<p>$$
J(\\theta_0,\\theta_1) = \\sum_{i=0}
$$</p>
"
`;

exports[`revealJs > Should not render 2`] = `
"<p>@slidestar</p>
<h2>Slide 1</h2>
<p>A paragraph with some text and a <a href="https://mister-hope.com">link</a></p>
<hr>
<h2>Slide 2</h2>
<ul>
<li>Item 1</li>
<li>Item 2</li>
</ul>
<hr>
<h2>Slide 3.1</h2>
<pre><code class="language-js">const a = 1;
</code></pre>
<p>--</p>
<h2>Slide 3.2</h2>
<p>$$
J(\\theta_0,\\theta_1) = \\sum_{i=0}
$$</p>
<p>@slideend</p>
"
`;

exports[`revealJs > Should render 1`] = `"<RevealJs id="revealjs-0" code="eJxVjb0KwjAUhff7FBfaoQXTH92UDo66OlppQxtMtGlCc0VBfHcTKJRuh4/vnANRhJdB9QJLgCNaPvH7xK3EtyKJzmiBJD6EfOyR43VQ4/OWSCLr9nmulSMxMWmsyDqjUwDGGCyTWw/wREL78TkEtHJ2mT9u2/bhoDOj809YYXkIKKgr05fjGM5JTVIQb4rNHMrUd2r30s1XVcUvSH9FOzuV" theme="auto"></RevealJs>"`;
